Prod-EU/force-app/main/default/objects/GoogleStorage__c/GoogleStorage__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GoogleStorage</label>
</CustomObject>