Prod-EU/force-app/main/default/objects/GoogleStorage__c/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccessToken</label>
    <length>250</length>
    <type>Text</type>
</CustomField>