Prod-EU/force-app/main/default/objects/GoogleStorage__c/fields/BucketName__c.field-meta.xml
<CustomField>
    <fullName>BucketName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BucketName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>