Prod-EU/force-app/main/default/objects/GoogleStorage__c/fields/Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration_Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>