Prod-EU/force-app/main/default/objects/GoogleStorage__c/fields/ServiceAccountEmail__c.field-meta.xml
<CustomField>
    <fullName>ServiceAccountEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ServiceAccountEmail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>